--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
-   <link rel="stylesheet" href="./Style.css">
+   
+   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <h2>Calculator</h2>
@@ -50,6 +51,7 @@
  
     </div>
     <footer class="foot">Prepared by Ahsan Noushad</footer>
-   <script src="./App.js"></script> 
+   <!-- <script src="./App.js"></script>  -->
+   <script src="./app.js"></script>
 </body>
 </html>
